--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <!-- Femanomnom -->
                 <div class="card">
                     <div class="img">
-                        <img src="/assets/Femanomnom.png" alt="FeMaNomnom">
+                        <img src="assets/Femanomnom.png" alt="FeMaNomnom">
                     </div>
                     <div class="project-tile"><a href="femanomom.html">FeMaNomnom</a></div>
                 </div>
@@ -51,7 +51,7 @@
                 <!-- Pomodorotimer -->
                 <div class="card">
                     <div class="img">
-                        <img src="/assets/timer.png" alt="Timer">
+                        <img src="assets/timer.png" alt="Timer">
                     </div>
                     <div class="project-tile"><a href="#">Pomodoro Timer Mac-App</a></div>
                 </div>
@@ -59,7 +59,7 @@
                 <!-- product landingpage -->
                 <div class="card">
                     <div class="img">
-                        <img src="/assets/landinppage_product.png" alt="Landing Page">
+                        <img src="assets/landinppage_product.png" alt="Landing Page">
                     </div>
                     <div class="project-tile"><a href="#">Product Landing Page</a></div>
                 </div>
@@ -67,7 +67,7 @@
                 <!-- technical Documentation -->
                 <div class="card">
                     <div class="img">
-                        <img src="/assets/technicalDocumentation.png" alt="Technical Documentation">
+                        <img src="assets/technicalDocumentation.png" alt="Technical Documentation">
                     </div>
                     <div class="project-tile"><a href="#">Technical Documentation Page</a></div>
                 </div>
@@ -77,7 +77,7 @@
                 <!--  
                 <div class="card">
                     <div class="img">
-                        <img src="/assets/landingPage.png" alt="Landing Page">
+                        <img src="assets/landingPage.png" alt="Landing Page">
                     </div>
                     <div class="project-tile"><a href="#">Landing Page</a></div>
                 </div>   -->
