--- a/femanomom.html
+++ b/femanomom.html
@@ -34,8 +34,11 @@
             <div class="content">
                 <h4>Description</h4>
                 <p>
-                    To finish the CS50X-course by the Harvard University I hab to code a whole project on my own. My wife and I love to cook but we often have to search our phones to find back our recent recipes. There I got the idea for FeMaNomnom from. FeMaNomnom is a Recipe Database. You can download the code from GitHub an run it locally as a Flask-Application or download it as a dockerfile from dockerhub.
-                    Starting the webapp you can create an account and start importing your recipes through a formular page. By submitting the form, the recipe is written to a SQlite-database which is the foundation for the Main-page which lists all the added Recipes. 
+                    To complete the CS50X course by Harvard University, I had to code an entire project on my own. My wife and I love to cook, 
+                    but we often have to search our phones to find our recent recipes. That's where I got the idea for FeMaNomnom. FeMaNomnom is 
+                    a recipe database. You can download the code from GitHub and run it locally as a Flask application or download it as a Dockerfile 
+                    from DockerHub. Upon starting the web app, you can create an account and start importing your recipes through a form page. 
+                    By submitting the form, the recipe is written to an SQLite database, which is the foundation for the main page that lists all the added recipes. 
                 </p>
                 <h4>Used Technology</h4>
                 <p>
