--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="img">
                         <img src="assets/Femanomnom.png" alt="FeMaNomnom">
                     </div>
-                    <div class="project-tile"><a href="femanomom.html">FeMaNomnom</a></div>
+                    <div class="project-tile"><a href="femanomom.html">FeMaNomNom</a></div>
                 </div>
 
                 <!-- Pomodorotimer -->
