--- a/femanomom.html
+++ b/femanomom.html
@@ -28,14 +28,14 @@
     <main>
         <section id="project">
             <div class="content">
-                <h3>__FeMaNomnom:__</h3>
+                <h3>__FeMaNomNom:__</h3>
             </div>
 
             <div class="content">
                 <h4>Description</h4>
                 <p>
                     To complete the CS50X course by Harvard University, I had to code an entire project on my own. My wife and I love to cook, 
-                    but we often have to search our phones to find our recent recipes. That's where I got the idea for FeMaNomnom. FeMaNomnom is 
+                    but we often have to search our phones to find our recent recipes. That's where I got the idea for FeMaNomNom. FeMaNomNom is 
                     a recipe database. You can download the code from GitHub and run it locally as a Flask application or download it as a Dockerfile 
                     from DockerHub. Upon starting the web app, you can create an account and start importing your recipes through a form page. 
                     By submitting the form, the recipe is written to an SQLite database, which is the foundation for the main page that lists all the added recipes. 
