--- a/femanomom.html
+++ b/femanomom.html
@@ -28,7 +28,7 @@
     <main>
         <section id="project">
             <div class="content">
-                <h3>__FeMaNomNom:__</h3>
+                <h3>_FeMaNomNom:_</h3>
             </div>
 
             <div class="content">
