--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
         <section id="projects">
             <div class="content">
-                <h3>__These are some of my projects:__</h3>
+                <h3 class="groß">__These are some of my projects:__</h3>
+                <h3 class="klein">These are some of my projects:</h3>
             </div>
             
             <div class="content card-wrapper">
