--- a/femanomom.html
+++ b/femanomom.html
@@ -86,7 +86,7 @@
         <section id="trenner"></section>
         <section id="footer">
             <div class="content">
-            <p>&copy; Created by Felix Schmincke</p>
+            <p>&copy; Created by Felix Schmincke  \t <a href="impressum.html>Impressum</a></p>
         </div>
         </section>
     </footer>
