--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <section id="trenner"></section>
         <section id="footer">
             <div class="content">
-            <p>&copy; Created by Felix Schmincke \t <a href="impressum.html>Impressum</a></p>
+            <p>&copy; Created by Felix Schmincke &nbsp; &nbsp;<a href="impressum.html">Impressum</a></p>
         </div>
         </section>
     </footer>
