--- a/funkfatzke/index.html
+++ b/funkfatzke/index.html
@@ -210,8 +210,7 @@
                 <div class="col-sm-12 col-md-6 col-lg-6">
                 <p>Gerald Blauel</br>
                 Cranachstraße 16<br>
-                Telefon: 123-123-123</br>
-                E-Mail: beispiel@beispiel.de</p>
+                E-Mail: info@funkfatzke.de</p>
                 </div>
             </div>
         </div>
