--- a/funkfatzke/index.html
+++ b/funkfatzke/index.html
@@ -210,6 +210,7 @@
                 <div class="col-sm-12 col-md-6 col-lg-6">
                 <p>Gerald Blauel</br>
                 Cranachstraße 16<br>
+                12157 Berlin</br>
                 E-Mail: info@funkfatzke.de</p>
                 </div>
             </div>
