Modified the CS50-project description

--- a/femanomom.html
+++ b/femanomom.html
@@ -34,11 +34,12 @@
             <div class="content">
                 <h4>Description</h4>
                 <p>
-                    To complete the CS50X course by Harvard University, I had to code an entire project on my own. My wife and I love to cook, 
-                    but we often have to search our phones to find our recent recipes. That's where I got the idea for FeMaNomNom. FeMaNomNom is 
-                    a recipe database. You can download the code from GitHub and run it locally as a Flask application or download it as a Dockerfile 
-                    from DockerHub. Upon starting the web app, you can create an account and start importing your recipes through a form page. 
-                    By submitting the form, the recipe is written to an SQLite database, which is the foundation for the main page that lists all the added recipes. 
+                    To complete the CS50x course by Harvard University, I developed an entire project independently. 
+                    My wife and I love cooking, but we often find ourselves scrolling through our phones to locate recent recipes. 
+                    That inspired me to create FeMaNomNom — a personal recipe database. FeMaNomNom allows users to manage their recipes conveniently. 
+                    The project is available on GitHub and can be run locally as a Flask application or deployed using a Dockerfile from DockerHub. 
+                    Once the web app is running, users can create an account and start adding recipes via a simple form. Each submission is stored in an 
+                    SQLite database, which serves as the backbone for the main page where all saved recipes are displayed.
                 </p>
                 <h4>Used Technology</h4>
                 <p>
